# Dixon-algoritm

./: .gitignore  .ninja_deps  .ninja_log  README.md
class/: CMakeLists.txt  dixon.hpp  main.cpp
src/: CMakeLists.txt  dixon.cpp  dixon.hpp  gauss.hpp  gauss_testing.hpp  main.cpp  slaves.hpp
